# localhost

./: Cargo.toml  PLAN.md  README.md
cgi-bin/: hello.pl  hello.py
configs/: default.conf  multi_host.conf  test_chat.conf
cpp/: README.md
docs/: ARCHITECTURE.md
src/: events.rs  lib.rs  main.rs
src/cgi/: mod.rs
src/chat/: mod.rs
src/config/: mod.rs  parser.rs  types.rs
src/http/: mod.rs  request.rs  response.rs
src/net/: epoll.rs  handle.rs  mod.rs  poll_common.rs  poll_std.rs  socket_unix.rs
src/server/: engine.rs  handler.rs  mod.rs
src/session/: mod.rs
tests/: chat_api.rs  config_load.rs  http_parser.rs  run_all.sh  server_smoke.rs
www/: chat.html  index.html  upload.html
www/assets/: app.js  chat.css  chat.js  style.css
www/demo/: index.html
www/errors/: 404.html  413.html  500.html
